<resources>
    <string name="app_name">ChargerProtector</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="border">Border</string>
    <string name="shape">Shape</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="defaultColor">Default</string>
</resources>
